[package]
name = "private-lending"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
constant_time_eq = "=0.3.1"
anchor-lang = "0.32.1"
arcium-anchor = { version = "0.8.5" }
